EC-2023: fix typo

--- a/EllipticCurves2023/lecture10_slides/lecture10_slides.tex
+++ b/EllipticCurves2023/lecture10_slides/lecture10_slides.tex
@@ -74,7 +74,7 @@
 	\structure{Степень изогении:} $\deg\phi = \max\{\deg{p(x)}, \deg{q(x)}\}$.
 	
 	\vspace{1em}
-	Изогения называется \structure{сепарабельной}, если производная $\frac{u}{v}$ по $x$ не равна $0$, и \structure{несепарабельной} в противном случае.
+	Изогения называется \structure{сепарабельной}, если производная $\frac{p}{q}$ по $x$ не равна $0$, и \structure{несепарабельной} в противном случае.
 	
 	\vspace{1em}
 	Для сепарабельных изогений $\deg\phi = \#ker\phi$.
