EC-2023: isogenies II (typos)

--- a/EllipticCurves2023/lecture11_slides/lecture11_slides.tex
+++ b/EllipticCurves2023/lecture11_slides/lecture11_slides.tex
@@ -232,14 +232,14 @@
 \begin{frame}{Соответствие Дойринга в явном виде}
 Пусть $\mathfrak{a}$ -- идеал порядка~$\mathcal{O}$, который изоморфен кольцу эндоморфизмов кривой~$E$ или его подкольцу. Определим \structure{$\mathfrak{a}$-кручение} как
 \[
-E[\mathfrak{a}] = \left\{P \in E(\mathbb{F}_q): \alpha(P) = P_\infty~\forall \alpha \in I \right\}.
+E[\mathfrak{a}] = \left\{P \in E(\overline{\mathbb{F}}_q): \alpha(P) = P_\infty~\forall \alpha \in I \right\}.
 \]
 Тогда идеалу~$\mathfrak{a}$ сопоставим изогению  $\phi_\mathfrak{a}$ с ядром $E[\mathfrak{a}]$.
 \vspace{0.5em}
 
 В обратную сторону: пусть $\phi$-изогения, тогда соответствующий ей идеал равен
 \[
-\mathfrak{a}_\phi = \left\{ \alpha \in \mathcal{O}: \alpha(P) = 0 ~\forall P \in \ker(\phi) \right\}.
+\mathfrak{a}_\phi = \left\{ \alpha \in \mathcal{O}: \alpha(P) = P_\infty ~\forall P \in \ker(\phi) \right\}.
 \]
 \end{frame}
 
