--- a/EllipticCurves2024/lecture03_slides/lecture3_slides.tex
+++ b/EllipticCurves2024/lecture03_slides/lecture3_slides.tex
@@ -97,7 +97,8 @@ E[2] = \left\{ \mathcal{O}, (e_1, 0), (e_2 ,0), (e_3,0) \right\} \simeq \mathbb{
 \end{frame}
 
 \begin{frame}{Структура группы $n$-кручения}
-Можно показать [Washington \S~3.1], что:
+Можно показать%[Washington \S~3.1]
+, что:
 \begin{align*}
     E[3] &\simeq \mathbb{Z}_3 \oplus \mathbb{Z}_3, & {\text{ при }}\operatorname{char} K \ne 3 \\
     E[3] &\simeq 0 \text{ или } E[3] \simeq \mathbb{Z}_3, & {\text{ при }} \operatorname{char} K = 3
@@ -113,7 +114,9 @@ E[2] = \left\{ \mathcal{O}, (e_1, 0), (e_2 ,0), (e_3,0) \right\} \simeq \mathbb{
         и $n = p^r \cdot n', p \nmid n'.$
     \end{itemize}
 \end{block}
+\ProofBegin
 Док-во: [Washington \S~3.2].
+\ProofEnd
 \end{frame}
 
 \begin{frame}{Типы кривых}
@@ -132,7 +135,8 @@ E[2] = \left\{ \mathcal{O}, (e_1, 0), (e_2 ,0), (e_3,0) \right\} \simeq \mathbb{
 \begin{itemize}
     \item описывают отображение $n: P \mapsto [n] P$
     \item используются в алгоритме подсчета точек кривой
-    \item используются в вычислениях изогений
+    \item используются в вычислениях изогений:\\
+    нахождения ядер изогений
 \end{itemize}
 \end{frame}
 
