ECC-2025: slides for lecture 2 and etc

--- a/EllipticCurves2025/biblio.bib
+++ b/EllipticCurves2025/biblio.bib
@@ -28,6 +28,13 @@
     year={1993}
 }
 
+@book{GelfandKapranovZelevinsky1994,
+	title={Discriminants, Resultants, and Multidimensional Determinants},
+	author={Gelfand, Israel M and Kapranov, Mikhail M and Zelevinsky, Andrei V},
+	year={1994},
+	publisher={Springer}
+}
+
 @book{vanTuyl1997,
     title={The field of $n$-torsion points of an elliptic curve over a finite field},
     author={van Tuyl, A. L.},
@@ -67,7 +74,8 @@
 @book{Silverman2009,
     title={The arithmetic of elliptic curves},
     author={Silverman, Joseph H},
-    year={2009}
+    year={2009},
+    edition={2}
 }
 
 @book{JaoDeFeo2011,
