ECC-2025: notes for lecture 2

--- a/EllipticCurves2025/lecture02_notes/lecture02_notes.tex
+++ b/EllipticCurves2025/lecture02_notes/lecture02_notes.tex
@@ -1,3 +1,5 @@
+% !TeX program = xelatex
+
 \documentclass[11pt]{exam}
 
 %---enable russian----
@@ -6,6 +8,14 @@
 %\usepackage[russian]{babel}
 \usepackage[english,main=russian]{babel}
 
+
+\usepackage{cmap}
+\usepackage{fontspec}
+\usepackage{ulem}
+
+\setmainfont{Roboto}
+\setsansfont{Roboto}
+\setmonofont{Roboto Mono}
 
 
 \usepackage[margin=0.73in]{geometry}
@@ -27,6 +37,8 @@
 \usetikzlibrary{chains, matrix, positioning, scopes, patterns, shapes}
 \usepackage{pgfplots, subfigure}
 \usetikzlibrary{automata}
+
+\usepackage{fontawesome5}
 
 
 \usepackage[most]{tcolorbox}
@@ -101,6 +113,8 @@
 \renewcommand{\char}{\ensuremath{\mathsf{char}}}
 
 \DeclareMathOperator{\Vol}{Vol}
+
+\newcommand*{\structure}[1]{\textcolor{struct-color}{#1}}
 
 %\pretolerance=1000
 
@@ -270,11 +284,52 @@
 	\end{tcolorbox}
 	Более того, поскольку в формулах используются только операции сложения, умножения и деления, то они работают и для любого поля. А не только для~$\mathbb{R}$. Для криптографических приложений наиболее интересен случай~$K = \mathbb{F}_q$.
 	
-	%\section{Быстрое скалярное умножение}
+	\section{Быстрое скалярное умножение}
+	Сложение точки самой собой несколько раз называется скалярным умножением, обозначается следующим образом.
+	\[
+	P \to \left[ k \right] \cdot P = \underbrace {P + P +  \ldots  + P}_{k{\text{-раз}}}
+	\]
 	
-	%\section{Протокол Диффи-Хэллмана}
+	Если складывать точку с самой собой наивно, то потребуется~$k-1$ сложений. Но для целей криптографии такой способ не подходит, так как в криптографических схемах используются большие значения~$k$. Есть более эффективный метод, представленный в Алгоритме~\ref{alg:scalar_mult}.
 	
-	%\section{Цифровая подпись}
+\begin{algorithm}
+	\caption{Бинарный метод быстрого умножения}\label{alg:scalar_mult}
+	\begin{algorithmic}
+		\Require $k \in \mathbb{Z}, P \in E(\mathbb{F}_q)$
+		\Ensure $[k] P$
+		\State $k = \sum\limits_{j = 0}^{\ell - 1} {{k_j}{2^j}},\quad {k_j} \in \left\{ {0,1} \right\}$\
+		\State $Q \gets \mathcal{O}$
+		\For{$j = \ell - 1$ \textbf{to} $0$ \textbf{by} $-1$}
+			\State $Q \gets \left[ 2 \right]Q$
+			\If{${k_j} = 1$}
+				\State $Q \gets Q + P$
+			\EndIf
+		\EndFor~\\
+		\Return $Q$
+	\end{algorithmic}
+\end{algorithm}
+Он уже требует только~$\mathcal{O}(\log k)$ сложений точек.
+
+\section{Протокол Диффи-Хэллмана}
+Группового закона и быстрого алгоритма скалярного умножения уже достаточно для определения криптографических схем. На следующем схеме представлен протокол обмена ключами Диффи-Хеллмана, позволяющий двум абонентам выработать общий секретный ключ.
+
+\begin{center}
+\input{../images/fig_dh}
+\end{center}
+В схеме каждый абонент выбирает свой секретный ключ -- число $a$ (или~$b$), а затем пересылает по открытому каналу значение~$[a]P$ (или~$[b]P$), которое представляют собой открытый ключ. Затем оба абонента по открытым ключам и своему секретному ключу вычисляют общий секретный ключ. Безопасность схемы строится на том факте, что задача вычисления числа $a$ зная только генератор группы~$P$ и точку~$[a]P$, является сложной задачей. Данная задача называется \structure{задачей вычисления дискретного логарифма (DLOG)}. На сегодняшний день не известно классического (не квантового) алгоритма, который в общем случае решал бы данную задачу за полиномиальное время.
+
+Заметим, что на практике схемы шифрования с открытым ключом не используются для шифрования большого количества информации из-за медленной (по сравнению с симметричными шифрами) скорости работы. Вместо этого используется гибридный подход -- сначала вырабатывается общий секретный ключ с использованием протокола обмена ключами. А затем данный ключ применяется для шифрования данных с помощью симметричного шифра.
+
+\section{Атака ``человек посередине''}
+Протокол Диффи-Хелмана уязвим к атаке ''человек посередине'', в которой имеется третья сторона, которая имеет возможность перехватывать и подменять открытые сообщения абонентов. В качестве такой третьей стороны может выступать провайдер интернета или владелец точки доступа. Схема атаки представлена на следующем рисунке.
+
+\begin{center}
+	\input{../images/fig_mitm}
+\end{center}
+Третья сторона вырабатывает с каждым из абонентов свой секретный ключ и с помощью секретных ключей перешифровывает переписку, попутно читая её. 
+
+%\section{Цифровая подпись}
+
 
 \nocite{Blake1999}
 \nocite{Washington2008}
