--- a/EllipticCurves2025/lecture02_slides/lecture02_slides.tex
+++ b/EllipticCurves2025/lecture02_slides/lecture02_slides.tex
@@ -348,32 +348,7 @@
 		%    %\end{enumerate}
 		%
 		\begin{center}
-			\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
-				%Straight Lines [id:da0832972187828418] 
-				\draw    (80,35) -- (185,35) ;
-				\draw [shift={(188,35)}, rotate = 540] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (5.36,-2.57) -- (0,0) -- (5.36,2.57) -- cycle    ;
-				\draw [shift={(77,35)}, rotate = 360] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (5.36,-2.57) -- (0,0) -- (5.36,2.57) -- cycle    ;
-				%Straight Lines [id:da17602726868869878] 
-				\draw    (80,70) -- (185,70) ;
-				\draw [shift={(188,70)}, rotate = 540] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (5.36,-2.57) -- (0,0) -- (5.36,2.57) -- cycle    ;
-				%Straight Lines [id:da5151276494097119] 
-				\draw    (80,105) -- (185,105) ;
-				\draw [shift={(79,105)}, rotate = 360] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (5.36,-2.57) -- (0,0) -- (5.36,2.57) -- cycle    ;
-				
-				% Text Node
-				\draw (50,24) node [anchor=north west][inner sep=0.75pt]   [align=left] { \structure{{\Large\faUserSecret}} };
-				\draw (200,24) node [anchor=north west][inner sep=0.75pt]   [align=right] {\structure{{\Large\faCat}}};
-				\draw (102,15) node [anchor=north west][inner sep=0.75pt]   [align=center] {$P \in E(\mathbb{F}_q)$};
-				% Text Node
-				\draw (35,62) node [anchor=north west][inner sep=0.75pt]   [align=left] { \structure{$a \in \mathbb{N}$} };
-				\draw (120,50) node [anchor=north west][inner sep=0.75pt]   [align=left] {$[a] P$};
-				% Text Node
-				\draw (120,86) node [anchor=north west][inner sep=0.75pt]   [align=left] {$[b]P$};
-				\draw (190,98) node [anchor=north west][inner sep=0.75pt]   [align=right] { \structure{$b \in \mathbb{N}$} };
-				% Text Node
-				\draw (-40,130) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{\boxed{[ab]P = [a]([b]P)}}};
-				\draw (190,130) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{\boxed{[ab]P = [b]([a]P)}}};
-			\end{tikzpicture}
+			\input{../images/fig_dh}
 		\end{center}
 		\begin{itemize}
 			\item Безопасность основана на сложности нахождения \structure{DLOG} (как минимум): \[(P, [n]P) \mapsto n\]
@@ -382,119 +357,7 @@
 	
 	\begin{frame}{Атака ``человек посередине''\footnote{\textit{(англ.)} man in the middle (MITM)}}
 		\begin{center}
-
-
-\tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
-
-\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-0.98,xscale=0.98]
-	%%%%%%%%%%%%%%%%%%%
-	% Left side arrows
-	%%%%%%%%%%%%%%%%%%%
-	%Straight Lines [id:da17602726868869878] 
-	\draw (145,130) -- (205,130);
-	\draw [shift={(207,130)}, rotate = 180] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (5.36,-2.57) -- (0,0) -- (5.36,2.57) -- cycle;
-	
-	%Straight Lines [id:da606368011362501]
-	\draw    (145,165) -- (205,165) ;
-	\draw [shift={(142,165)}, rotate = 360] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (5.36,-2.57) -- (0,0) -- (5.36,2.57) -- cycle;
-	
-	%Straight Lines [id:da0586486120331462] 
-	\draw    (145,195) -- (205,195) ;
-	\draw [shift={(207,195)}, rotate = 180] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (5.36,-2.57) -- (0,0) -- (5.36,2.57) -- cycle;
-
-	%%%%%%%%%%%%%%%%%%%%
-	% Right side arrows
-	%%%%%%%%%%%%%%%%%%%%
-	%Straight Lines [id:da5151276494097119] 
-	\draw (320,130) -- (380,130) ;
-	\draw [shift={(318,130)}, rotate = 360] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (5.36,-2.57) -- (0,0) -- (5.36,2.57) -- cycle;
-
-	%Straight Lines [id:da09168079881977365] 
-	\draw    (320,165) -- (380,165) ;
-	\draw [shift={(382,165)}, rotate = 180] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (5.36,-2.57) -- (0,0) -- (5.36,2.57) -- cycle;
-
-	%Straight Lines [id:da4782643167070846] 
-	\draw    (320,195) -- (380,195) ;
-	\draw [shift={(382,195)}, rotate = 180] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (5.36,-2.57) -- (0,0) -- (5.36,2.57) -- cycle;
-	
-	%%%%%%%%%%%%%%%%%%%%%%%
-	% Text nodes for Agent
-	%%%%%%%%%%%%%%%%%%%%%%%
-	% Text Node
-	\draw (120,72) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{{\Large\faUserSecret}}};
-
-	% Text Node
-	\draw (100,122) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{$a \in \mathbb{N}$}};
-
-	% Text Node
-	\draw (52,156) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{$k_a = [a] ([c] P)$}};
-	
-	% Text Node
-	\draw (42,186) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{$c_a=Enc_{k_a}(\text{\faCheese})$}};
-	
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	% Text nodes for left side arrows
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	% Text Node
-	\draw (162,110) node [anchor=north west][inner sep=0.75pt]   [align=left] {$[a] P$};
-
-	% Text Node
-	\draw (162,146) node [anchor=north west][inner sep=0.75pt]   [align=left] {$[c] P$};
-
-	% Text Node
-	\draw (170,180) node [anchor=north west][inner sep=0.75pt]   [align=left] {$c_a$};
-
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	% Text nodes for public parameters
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	% Text Node
-	\draw (225,35) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{\boxed{P \in E(\mathbb{F}_q)}}};
-
-	%%%%%%%%%%%%%%%%%%%%%%%
-	% Text nodes for Mouse
-	%%%%%%%%%%%%%%%%%%%%%%%
-	% Text Node
-	\draw (245,115) node [anchor=north west][inner sep=0.75pt]   [align=center] {\includegraphics[width=2.5em]{mouse.png}};
-
-	% Text Node
-	\draw (245,155) node [anchor=north west][inner sep=0.75pt]   [align=center] {\structure{$c \in \mathbb{N}$}};
-
-	% Text Node
-	\draw (215,186) node [anchor=north west][inner sep=0.75pt]   [align=center] {\structure{$\text{\faCheese} = Dec_{k_a}(c_a)$}};
-
-	% Text Node
-	\draw (216,215) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{$c_b = Enc_{k_b}(\text{\faCheese})$}};
-
-
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	% Text Nodes for right side arrows
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	% Text Node
-	\draw (335,110) node [anchor=north west][inner sep=0.75pt]   [align=left] {$[b] P$};	
-	
-	% Text Node
-	\draw (335,146) node [anchor=north west][inner sep=0.75pt]   [align=left] {$[c] P$};
-	
-	% Text Node
-	\draw (340,180) node [anchor=north west][inner sep=0.75pt]   [align=left] {$c_b$};
-
-
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	% Text Nodes for Cat
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	% Text Node
-	\draw (385,72) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{{\Large\faCat}}};
-
-	% Text Node
-	\draw (385,122) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{$b \in \mathbb{N}$}};
-
-	% Text Node
-	\draw (385,156) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{$k_b = [b] ([c] P)$}};
-	
-	% Text Node
-	\draw (385,186) node [anchor=north west][inner sep=0.75pt]   [align=left] {\structure{$\text{\faCheese} = Dec_{k_b}(c_b)$}};
-	
-\end{tikzpicture}
+			\input{../images/fig_mitm}
 		\end{center}
 
 %		\begin{itemize}
