ECC2025: slides and notes for lecture 8

--- a/EllipticCurves2025/lecture02_notes/lecture02_notes.tex
+++ b/EllipticCurves2025/lecture02_notes/lecture02_notes.tex
@@ -189,7 +189,7 @@
 			m &= \frac{y_2 - y_1}{x_2 - x_1}.
 		\end{split}
 	\end{equation*}
-	Может получиться так, что точки пересечения нет, как на рисунке~\ref{fig:group:law:inf}. В этом случае полагаем~$P_3 = \mathcal{O}$.
+	Может получиться так, что точки пересечения нет, как на Рис.~\ref{fig:group:law:inf}. В этом случае полагаем~$P_3 = \mathcal{O}$.
 	\begin{figure}[h!]
 		\centering
 		\caption{Групповой закон над $\mathbb{R}$. Случай~$x_1 = x_2$.}
