--- a/EllipticCurves2023/lecture10_slides/lecture10_slides.tex
+++ b/EllipticCurves2023/lecture10_slides/lecture10_slides.tex
@@ -35,7 +35,7 @@
 \newcommand{\UserB}{{\structure{{\Large\faCat}}}}
 
 \begin{frame}{Мотивация}
-	
+
 Постквантовая криптография на изогениях.
 \vspace{0.5em}
 	
@@ -532,7 +532,7 @@ b' = b - 7 \sum_{Q \in G \setminus \{\mathcal{O}\}} \left(
 		on SIDH. 2022.
 		\vspace{0.5em}
 		
-		\item[\structure{{\faGlobe}}] SIKE – Supersingular Isogeny Key Encapsulation. 2020. \url{https://sike.org/}
+		\item[\structure{{\faGlobe}}] SIKE -- Supersingular Isogeny Key Encapsulation. 2020. \url{https://sike.org/}
 		\vspace{0.5em}
 		
 		\item[\structure{{\faYoutube}}]
